// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDriverSnapshot should render error state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-crXcEl RnGTA"
  >
    <p>
      Terjadi Kesalahan Saat pengambilan Data Driver.
    </p>
    <button
      class="sc-bczRLJ jMYSRp"
    >
      Coba Lagi
    </button>
  </div>
</DocumentFragment>
`;

exports[`ListDriverSnapshot should render loading state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-iqcoie kFsmBA"
  >
    <div
      class="sc-kDDrLX cjRdeF"
    />
  </div>
</DocumentFragment>
`;

exports[`ListDriverSnapshot should render normal state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-evZas hJMyXD"
  >
    <div
      class="sc-dkzDqf kFGQEb"
    >
      <div
        class="sc-eCYdqJ cOzWIu"
      >
        <div>
          <p
            class="sc-hKMtZM sc-jSMfEi cHivdW dtQlSY"
          >
            Driver ID
          </p>
          <p
            class="sc-gKXOVf iKGcfe"
          >
            userName
          </p>
        </div>
        <div
          class="sc-iBkjds eUfGnI"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z"
            />
          </svg>
        </div>
      </div>
      <img
        class="sc-gsnTZi hFMZzo"
        src="profile_picture_url"
      />
      <div
        class="sc-jqUVSM ifauud"
      >
        <p
          class="sc-hKMtZM sc-ftvSup cHivdW jJhkwV"
        >
          Nama Driver
        </p>
        <p
          class="sc-papXJ kUVpcZ"
        >
          firstName, lastName
        </p>
      </div>
      <div
        class="sc-jqUVSM ifauud"
      >
        <p
          class="sc-hKMtZM sc-ftvSup cHivdW jJhkwV"
        >
          Telepon
        </p>
        <p
          class="sc-papXJ kUVpcZ"
        >
          098123123123
        </p>
      </div>
      <div
        class="sc-jqUVSM ifauud"
      >
        <p
          class="sc-hKMtZM sc-ftvSup cHivdW jJhkwV"
        >
          Email
        </p>
        <p
          class="sc-papXJ kUVpcZ"
        >
          email@email.com
        </p>
      </div>
      <div
        class="sc-jqUVSM ifauud"
      >
        <p
          class="sc-hKMtZM sc-ftvSup cHivdW jJhkwV"
        >
          Tanggal Lahir
        </p>
        <p
          class="sc-papXJ kUVpcZ"
        >
          12/10/1998
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
